[gd_scene load_steps=19 format=3 uid="uid://bisvlvyqdhv24"]

[ext_resource type="Script" path="res://scenes/world.gd" id="1_vg2yb"]
[ext_resource type="Texture2D" uid="uid://btbtgw0qbbdfg" path="res://art/back.png" id="1_w630v"]
[ext_resource type="AudioStream" uid="uid://bwsb6u52xibnp" path="res://sound/NaxxramasAbominationBoss1.mp3" id="2_0sx0p"]
[ext_resource type="AudioStream" uid="uid://e7iu3jgh7llb" path="res://sound/PAT_NAXX_AGGRO01.ogg" id="2_53ro4"]
[ext_resource type="Script" path="res://scenes/Coner.gd" id="2_ppjf5"]
[ext_resource type="Texture2D" uid="uid://c8xeufjyewx3b" path="res://art/coner.png" id="2_v6idl"]
[ext_resource type="Theme" uid="uid://dcincm1y4yein" path="res://themes/theme.tres" id="8_78b1p"]
[ext_resource type="AudioStream" uid="uid://c5kdfg3ukk21h" path="res://sound/DwarfMaleMainDeathA.ogg" id="10_dp027"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2ie3j"]
atlas = ExtResource("2_v6idl")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6umvv"]
atlas = ExtResource("2_v6idl")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8menb"]
atlas = ExtResource("2_v6idl")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5h7r"]
atlas = ExtResource("2_v6idl")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdbet"]
atlas = ExtResource("2_v6idl")
region = Rect2(192, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_xi73f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ie3j")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6umvv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8menb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5h7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdbet")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sm1ax"]
radius = 32.249

[sub_resource type="LabelSettings" id="LabelSettings_tvmru"]
font_size = 48
font_color = Color(0.996078, 0.32549, 0.184314, 1)
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_mpjml"]
font_size = 48
font_color = Color(0, 0.654902, 0.815686, 1)
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lwr06"]
font_size = 32
font_color = Color(0.698039, 1, 0.105882, 1)
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="World" type="Node2D"]
script = ExtResource("1_vg2yb")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0sx0p")
autoplay = true

[node name="BeginSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_53ro4")
autoplay = true

[node name="Back" type="Sprite2D" parent="."]
position = Vector2(454, 76)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_w630v")

[node name="Mobs" type="Node2D" parent="."]

[node name="Coner" type="Area2D" parent="."]
collision_mask = 8
script = ExtResource("2_ppjf5")

[node name="Animation" type="AnimatedSprite2D" parent="Coner"]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_xi73f")
animation = &"dead"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coner"]
visible = false
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_sm1ax")

[node name="Blood" type="CPUParticles2D" parent="Coner"]
emitting = false
amount = 100
lifetime = 2.0
speed_scale = 2.0
explosiveness = 0.5
local_coords = true
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 40.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color = Color(0.662745, 0, 0, 1)

[node name="DeathSound" type="AudioStreamPlayer" parent="Coner"]
stream = ExtResource("10_dp027")

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameOver" type="Label" parent="UI"]
unique_name_in_owner = true
visible = false
offset_left = 258.0
offset_top = 84.0
offset_right = 666.0
offset_bottom = 250.0
theme = ExtResource("8_78b1p")
text = "Coner is DEAD
GAME OVER"
label_settings = SubResource("LabelSettings_tvmru")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="UI"]
unique_name_in_owner = true
visible = false
offset_left = 246.0
offset_top = 253.0
offset_right = 654.0
offset_bottom = 419.0
theme = ExtResource("8_78b1p")
text = "Score"
label_settings = SubResource("LabelSettings_mpjml")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Played" type="Label" parent="UI"]
unique_name_in_owner = true
offset_left = 23.0
offset_top = 18.0
offset_right = 63.0
offset_bottom = 41.0
theme = ExtResource("8_78b1p")
text = "0:00"
label_settings = SubResource("LabelSettings_lwr06")

[connection signal="finished" from="BackgroundMusic" to="." method="_on_background_music_finished"]
